# LuxMark

./: .gitignore  .hgignore  AUTHORS.txt  CMakeLists.txt  Configuration.cmake  README.md  README.txt  release-notes.txt
cmake/: AssembleBinDirs.cmake  Dependencies.cmake  PlatformSpecific.cmake
cmake/SpecializedConfig/: Config_Dade.cmake  Config_Linux-Static.cmake  Config_OSX.cmake  Config_Windows.cmake
cmake/Utils/: AdjustToolFlags.cmake  FindPkgMacros.cmake
scenes/: readme.txt
scenes/luxball/: imagemap-00000.exr  imagemap-00001.exr  luxball.Scene.00001.lxs  mesh-00000.ply  mesh-00002.ply  mesh-00003.ply  mesh-00004.ply  mesh-00005.ply  mesh-00006.ply  reference-hybrid.raw  reference-native.raw  reference-opencl.raw  reference.raw  render-biaspathcpu.cfg  render-biaspathocl.cfg  render-luxvr.cfg  render-rtbiaspathocl.cfg  render-rtpathocl.cfg  render.cfg  scene.scn
scenes/luxball/luxball/Scene/00001/: Curve_001_0000_m000.ply  Floor_0000_m000.ply  LuxRender-Geometry.lxo  LuxRender-Materials.lxm  Luxball_ring_0000_m000.ply  Text_000_0000_m000.ply  luxball_center-sphere_0000_m000.ply  luxball_stand_0000_m000.ply
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  hardwaretree.cpp  hardwaretree.h  kernelcompilationdialog.cpp  kernelcompilationdialog.h  kernelcompilationdialog.ui  luxcorerendersession.cpp  luxcorerendersession.h  luxcoreuidialog.cpp  luxcoreuidialog.h  luxcoreuidialog.ui  luxmarkapp.cpp  luxmarkapp.h  luxmarkcfg.h  luxmarkcfg.h.in  luxmarkdefs.h  luxrendersession.cpp  luxrendersession.h  luxvrdialog.cpp  luxvrdialog.h  luxvrdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_aboutdialog.cxx_parameters  moc_hardwaretree.cxx_parameters  moc_luxmarkapp.cxx_parameters  moc_luxvrdialog.cxx_parameters  moc_mainwindow.cxx_parameters  moc_resultdialog.cxx_parameters  moc_submitdialog.cxx_parameters  resources.qrc  resultdialog.cpp  resultdialog.h  resultdialog.ui  slgdefs.h  (+7 more)
src/convtest/: convtest.cpp  convtest.h
src/convtest/pdiff/: lpyramid.cpp  lpyramid.h  metric.cpp  metric.h
src/libcpuid/: cpuid_main.c
src/linux-64bit/: LuxMark.sh
src/osx-bundle/: Info.plist
web/luxmark_module/: luxmark_module.module
web/luxmark_web/: luxmark_web.info  luxmark_web.module
web/zen_luxmark/: template.php  theme-settings.php  zen_luxmark.info
web/zen_luxmark/css/: luxmark.css
web/zen_luxmark/sass/layouts/: _fixed.scss  _responsive.scss
